--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
         <input type="number" class="input" id="pages" placeholder="Pages" required max="10000">
 
         <div class="is-read">
-          <label for="is-read">Have you read it?</label>
-          <input type="checkbox" id="isRead" required>
+          <label for="status">Status</label>
+          <select name="status" id="status">
+          <option value="read">Read</option>
+          <option value="not read">Not read</option>
+          </select>
         </div>
         <button class="submitBtn" type="submit">Submit</button>
       </form>
